# benchtest

./: CMakeLists.txt  Makefile  README.md  bench.cpp  catch.nix  clang_linux_bench.s  clang_osx_bench.s  conanfile.txt  default.nix
bench/: CMakeLists.txt  bench.cc  bench_caches.cc  bench_fac.cc  bench_rhomb.cc
include/: caches.hh  fac.hh  odd_num.hh  rhomb.hh  swaps.hh
src/: bench.cc  bench.cpp  main.cc
test/: CMakeLists.txt  test_caches.cc  test_swap.cc
